--- a/WPB Test 1/index.html
+++ b/WPB Test 1/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/swiper.css">
-    <title>Test 1</title>
+    <link rel="icon" href="assets/images/favicon.svg">
+    <title>Spotify</title>
 </head>
 
 <body>
@@ -56,20 +57,20 @@
                                 class="submenu-toggle">
                             <ul class="sub-menu">
                                 <li>
-                                    <a href=""><span>track map</span></a>
+                                    <a href=""><span>Sports Shoes</span></a>
                                 </li>
                                 <li>
-                                    <a href=""><span>track map</span></a>
+                                    <a href=""><span>Sports Garments</span></a>
                                 </li>
                                 <li>
-                                    <a href=""><span>track map</span></a>
+                                    <a href=""><span>Accessories</span></a>
                                     <img src="assets/images/down-arrow-backup-2-svgrepo-com (1).svg" alt=""
                                         class="subsubmenu-toggle">
 
                                     <ul class="sub-sub-menu">
-                                        <li><a href=""><span>track map</span></a></li>
-                                        <li><a href=""><span>track map</span></a></li>
-                                        <li><a href=""><span>track map</span></a></li>
+                                        <li><a href=""><span>Long Shorts</span></a></li>
+                                        <li><a href=""><span>Handle Grips</span></a></li>
+                                        <li><a href=""><span>Stickers</span></a></li>
                                     </ul>
                                 </li>
 
@@ -182,8 +183,12 @@
                     <div class="hero-slider-wrapper">
 
                         <!-- Navigation arrows using Swiper default classes -->
-                        <div class="swiper-button-prev hero-section-prev"></div>
-                        <div class="swiper-button-next hero-section-next"></div>
+                        <div class="hero-section-prev"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="30" viewBox="0 0 17 30" fill="none">
+<path d="M0 27.345L2.5565 30L17 15L2.5565 0L0 2.655L11.887 15L0 27.345Z" fill="white"/>
+</svg></div>
+                        <div class="hero-section-next"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="30" viewBox="0 0 17 30" fill="none">
+<path d="M0 27.345L2.5565 30L17 15L2.5565 0L0 2.655L11.887 15L0 27.345Z" fill="white"/>
+</svg></div>
 
                         <!-- Swiper Slider -->
                         <div class="swiper hero-section-Swiper">
@@ -341,8 +346,12 @@
 
                             <!-- scoped pagination + nav -->
                             <div class="main-section-pagination swiper-pagination"></div>
-                            <div class="main-section-prev swiper-button-prev"></div>
-                            <div class="main-section-next swiper-button-next"></div>
+                            <div class="main-section-prev"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="36" viewBox="0 0 18 36" fill="none">
+<path d="M0.344999 30.345L3 33L18 18L3 3L0.344999 5.655L12.69 18L0.344999 30.345Z" fill="white"/>
+</svg></div>
+                            <div class="main-section-next"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="36" viewBox="0 0 18 36" fill="none">
+<path d="M0.344999 30.345L3 33L18 18L3 3L0.344999 5.655L12.69 18L0.344999 30.345Z" fill="white"/>
+</svg></div>
                         </div>
 
 
