--- a/WPB Test 1/index.html
+++ b/WPB Test 1/index.html
@@ -502,7 +502,7 @@
                     </div>
                 </div>
                 <section class="tab-section">
-                    <div class="tab">
+                    <!-- <div class="tab">
                         <button class="tablinks" onclick="openCity(event, 'MatchInfo')">
                             <span class="tab-btn">Match Info</span>
                         </button>
@@ -512,11 +512,28 @@
                         <button class="tablinks" onclick="openCity(event, 'MatchSchedule')">
                             <span class="tab-btn">Match Schedule</span>
                         </button>
-                    </div>
+                    </div> -->
+                     <div class="tab">
+    <button class="tablinks active" data-target="MatchInfo">
+        <span class="tab-btn">Match Schedule</span>
+    </button>
 
+    <button class="tablinks" data-target="MatchResults">
+        <span class="tab-btn">Match Info</span>
+    </button>
+
+    <button class="tablinks" data-target="MatchSchedule">
+        <span class="tab-btn">Match Results</span>
+    </button>
+</div>
+
+
+
+
+                    
                     <div id="MatchInfo" class="tabcontent">
 
-                        <p>Pende gönat kogörade att dor. Göktig vivår tedöna, sprita att pan. Nev dåhet diare refar.
+                        <p>Tab 1 Pende gönat kogörade att dor. Göktig vivår tedöna, sprita att pan. Nev dåhet diare refar.
                             Pseudov hemitett tira:
                             atomslöjd defas. Dell osat niväsk ynade. Terapon jömyr negt astrogahet. Preppare multirat.
                             Pibånas id ifall kontrabon
@@ -556,7 +573,7 @@
                     </div>
 
                     <div id="MatchResults" class="tabcontent">
-                        <p> Pende gönat kogörade att dor. Göktig vivår tedöna, sprita att pan. Nev dåhet diare refar.
+                        <p>Tab 2 Pende gönat kogörade att dor. Göktig vivår tedöna, sprita att pan. Nev dåhet diare refar.
                             Pseudov hemitett tira:
                             atomslöjd defas. Dell osat niväsk ynade. Terapon jömyr negt astrogahet. Preppare multirat.
                             Pibånas id ifall kontrabon
@@ -598,7 +615,7 @@
 
                     <div id="MatchSchedule" class="tabcontent">
 
-                        <p>Pende gönat kogörade att dor. Göktig vivår tedöna, sprita att pan. Nev dåhet diare refar.
+                        <p>Tab 3 Pende gönat kogörade att dor. Göktig vivår tedöna, sprita att pan. Nev dåhet diare refar.
                             Pseudov hemitett tira:
                             atomslöjd defas. Dell osat niväsk ynade. Terapon jömyr negt astrogahet. Preppare multirat.
                             Pibånas id ifall kontrabon
@@ -617,6 +634,7 @@
                             tirade diade. Ar bev, sul. Ojör bepise videosamtal laledes. Tivodöktigt vagon liksom
                             demiitet. Las nafurat
                             jasminrevolution.<br>
+
 
                             Lörem ipsum pren filomani. Kak or. Pende gönat kogörade att dor. Göktig vivår tedöna, sprita
                             att pan. Nev dåhet diare
