clip path and hover
clip path and hover

--- a/WPB Test 1/index.html
+++ b/WPB Test 1/index.html
@@ -25,7 +25,7 @@
 
             <div class="primary-nav container">
                 <div class="logo-flex">
-                    <a href="">
+                    <a href="#">
                         <img src="assets/images/logo.png.png" alt="Adidas-logo">
                     </a>
 
@@ -93,74 +93,7 @@
 
         </div>
 
-        <!-- <div class="top-bar">
-            <p>LIVE RACE STREAM FROM GATOR NATIONALS IN SARASOTA, FL / <a href="">WATCH NOW</a></p>
-            <img src="assets/images/close button.png" alt="close button" class="close-btn">
-        </div>
-
-        <div class="primary-nav container">
-            <div class="logo-flex">
-                <img src="assets/images/logo.png.png" alt="Adidas-logo">
-                <img class="hamburger" src="assets/images/burger.png" alt="" width="25" height="20">
-
-            </div>
-
-            <div class="primary-nav-btn">
-                <a href=""><span>Membership</span></a>
-                <a href=""><span>Account</span></a>
-            </div>
-        </div>
-        <div class="secondary-nav">
-
-            <nav class="container">
-                <ul>
-                    <li>
-                        <a href=""><span>our tracks</span></a>
-                    </li>
-                    <li>
-                        <a href=""><span>find events</span></a>
-                    </li>
-                    <li>
-                        <a href=""><span>track map</span></a>
-                    </li>
-                    <li>
-                        <a href=""><span>shop</span></a>
-                        <img src="assets/images/down-arrow-backup-2-svgrepo-com (1).svg" alt="" class="submenu-toggle">
-                        <ul class="sub-menu">
-                            <li>
-                                <a href=""><span>track map</span></a>
-                            </li>
-                            <li>
-                                <a href=""><span>track map</span></a>
-                            </li>
-                            <li>
-                                <a href=""><span>track map</span></a>
-                                <img src="assets/images/down-arrow-backup-2-svgrepo-com (1).svg" alt=""
-                                    class="subsubmenu-toggle">
-
-                                <ul class="sub-sub-menu">
-                                    <li><a href=""><span>track map</span></a></li>
-                                    <li><a href=""><span>track map</span></a></li>
-                                    <li><a href=""><span>track map</span></a></li>
-                                </ul>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li>
-                        <a href=""><span>about us</span></a>
-                    </li>
-
-                </ul>
-                <form action="">
-                    <input type="text" placeholder="Search">
-                    <button type="submit"><img src="assets/images/table-search-input-icon.svg"
-                            alt="search-icon"></button>
-                </form>
-
-            </nav>
-        </div> -->
-
+        
 
 
 
