--- a/WPB Test 1/index.html
+++ b/WPB Test 1/index.html
@@ -81,7 +81,7 @@
 
                 </ul>
                 <form action="">
-                    <input type="text" placeholder="Search">
+                    <input type="search" placeholder="Search">
                     <button type="submit"><img src="assets/images/table-search-input-icon.svg"
                             alt="search-icon"></button>
                 </form>
